cambio useEffect, promise, map

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,12 +1,19 @@
 .navbar-container-color {
-    padding: 0 73.5px 0 73.5px;
+    padding-bottom: 2em;
+    padding-left: 25em;
     background-color: #fff159;
     border: 0;
     position: relative;
-    height: 50px;
-    font-size: 14px;
+    height: 45px;
+    font-size: 13px;
+    font-weight: 400;
     line-height: 22px;
+    -webkit-box-shadow: 0 1px 0 0 rgb(0 0 0 / 10%);
+    box-shadow: 0 1px 0 0 rgb(0 0 0 / 10%);
 }
+
+
+
 
 .navbar-logo {
     background-image: url(https://http2.mlstatic.com/frontend-assets/ui-navigation/5.18.2/mercadolibre/logo__large_plus.png);
