--- a/src/components/styles/Search/Search.css
+++ b/src/components/styles/Search/Search.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 0.5em 73.5px 0 0;
+    padding: 15px 60px 9px 15px;
     background-color: #fff159;
     border: 0;
     height: 45px;
@@ -17,6 +17,7 @@
 .search-search {
     display: flex;
     align-items: center;
-    width: 500px;
-    height: 25px;
+    width: 598px;
+    height: 24px;
+    
 }
